--- a/EmployeesRegister/EmployeesRegister.csproj
+++ b/EmployeesRegister/EmployeesRegister.csproj
@@ -184,6 +184,12 @@
     <Content Include="Views\Employees\Details.cshtml" />
     <Content Include="Views\Employees\Edit.cshtml" />
     <Content Include="Views\Employees\Index.cshtml" />
+    <Content Include="Views\Employees\Factory.cshtml" />
+    <Content Include="Views\Employees\Sales.cshtml" />
+    <Content Include="Views\Employees\Coporate.cshtml" />
+    <Content Include="Views\Employees\Worker.cshtml" />
+    <Content Include="Views\Employees\Teamleader.cshtml" />
+    <Content Include="Views\Employees\Manager.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
